--- a/css/style.css
+++ b/css/style.css
@@ -21,28 +21,47 @@ body {
 
 #content {
   padding: 20px;
-  background: rgba(255,255,255,.85);
+  background: rgba(200, 202, 137, 0.85);
 }
 
-h1, h2 {
+h1 {
+  text-align: center;
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: rgb(217, 166, 38);
+  text-decoration: underline overline;
+  text-shadow: -3px -3px 0px rgba(255, 255, 255, 0.85);
 }
 
 h1 {
   font-size: 3.5em;
   margin-bottom: 0;
 }
-
-h2 {
-  font-size: 1.5em;
+h2{  
+    text-align: center;
+    font-family: DejaVu Sans Mono,monospace;
+    font-size: 25px;
+    font-weight: 100;
+    color: rgb(102, 17, 17);
+    text-transform: none;
+    font-style: italic;
+    text-decoration: underline overline;
+    line-height: 1.7em;
+    letter-spacing: 0px;
+    background-color:  rgba(200, 202, 137, 0.85);
+}
+h4 {
+  font-size: 1.7em;
+  color: rgb(255, 255, 255);
   margin-top: .5em;
+  background-color: rgb(217, 166, 38);
 }
 
 h3 {
   font-family: 'Gabriela', serif;
   font-size: 1.5em;
   margin-top: .5em;
+  color:rgb(125, 16, 16);
+  text-decoration: overline;
 }
 
 img {
@@ -52,12 +71,14 @@ img {
 }
 
 p {
-  font-size: 1em;
+  color:rgb(89, 10, 10);
+  font-size: 1.2em;
 }
 
 a {
-  color: black;
+  color:rgb(89, 10, 10);
   text-decoration: none;
+  font-size: 1.2em;
 }
 
 a:hover {
